tarjetas con flip-flop

--- a/src/app/components/listprod/listprod.component.html
+++ b/src/app/components/listprod/listprod.component.html
@@ -1,18 +1,71 @@
 
+<app-flash-card *ngFor="let producto of listaProductos" >
 
-<ion-card *ngFor="let producto of listaProductos" > 
-    
-    <ion-grid>
+    <div class="flash-card-front">
         <ion-row>
             <ion-col size="4">
-                    <!--ion-img src="http://www.zsmotor.cl/img/Producto/{{ producto.codigo }}/{{ producto.codigo }}.jpg" onerror=" this.src='assets/imgs/no-img.png' "></ion-img-->
-                    <img src="http://www.zsmotor.cl/img/Producto/{{ producto.codigo }}/{{ producto.codigo }}.jpg" onerror=" this.src='assets/imgs/no-img2.png' "/>
-                </ion-col>
-            <ion-col size="8">
+                <img src="http://www.zsmotor.cl/img/Producto/{{ producto.codigo }}/{{ producto.codigo }}.jpg" onerror=" this.src='assets/imgs/no-img2.png' "/>
+            </ion-col>
+            <ion-col size="7">
                 <p class="masgrande"><b>{{ producto.codigo }}</b></p>
                 <ion-label><h3>{{ producto.descripcion }}</h3></ion-label>
             </ion-col>
+            <ion-col size="1">
+                <ion-label *ngIf=" producto.stock_ud1 <= 0 "      ><ion-icon name="pin"   color="danger" ></ion-icon></ion-label>
+                <ion-label *ngIf=" producto.stock_ud1 > 0 "       ><ion-icon name="pin"   color="primary"></ion-icon></ion-label>
+                <ion-label *ngIf=" producto.stock_total_ud1 <=0 " ><ion-icon name="globe" color="danger" ></ion-icon></ion-label>
+                <ion-label *ngIf=" producto.stock_total_ud1 > 0 " ><ion-icon name="globe" color="primary"></ion-icon></ion-label>
+                <ion-label *ngIf=" producto.importado > 0 "       ><ion-icon name="boat"  color="primary"></ion-icon></ion-label>
+                <ion-label *ngIf=" producto.descuentomax > 0 && producto.descuentomax >  30 "><ion-icon name="star"         color="primary"></ion-icon></ion-label>
+                <ion-label *ngIf=" producto.descuentomax >10 && producto.descuentomax <= 30 "><ion-icon name="star-half"    color="primary"></ion-icon></ion-label>
+                <ion-label *ngIf=" producto.descuentomax > 0 && producto.descuentomax <= 10 "><ion-icon name="star-outline" color="primary"></ion-icon></ion-label>
+            </ion-col>
         </ion-row>
-    </ion-grid>
+    </div>
 
-</ion-card>      
+    <div class="flash-card-back">
+
+        <ion-chip>
+            <ion-label color="primary"><b>({{ producto.bodega }}) {{ producto.nombrebodega }}</b></ion-label>
+        </ion-chip>
+        
+        <ion-chip *ngIf=" producto.stock_ud1 > 0 ">
+            <ion-icon name="pin"></ion-icon>
+            <ion-label><b>Stock: {{ producto.stock_ud1.toLocaleString( 'es',{ maximumFractionDigits: 0 } ) }}</b></ion-label>
+        </ion-chip>
+        <ion-chip *ngIf=" producto.stock_ud1 <= 0 " color="danger">
+            <ion-icon name="pin"></ion-icon>
+            <ion-label><b>Sin stock</b></ion-label>
+        </ion-chip>
+
+        <ion-chip *ngIf=" producto.stock_total_ud1 > 0 " >
+            <ion-icon name="globe"></ion-icon>
+            <ion-label><b>Stock: {{ producto.stock_total_ud1.toLocaleString( 'es',{ maximumFractionDigits: 0 } ) }}</b></ion-label>
+        </ion-chip>
+
+        <ion-chip *ngIf=" producto.importado > 0 || config.soloverimport ">
+            <ion-icon name="boat"></ion-icon>
+            <ion-label><b>On Board: {{ producto.importado.toLocaleString( 'es',{ maximumFractionDigits: 0 } ) }}</b></ion-label>
+        </ion-chip>
+
+        <ion-chip>
+            <ion-label *ngIf=" producto.descuentomax > 0 " >{{ producto.tipolista }} <s>${{ producto.precio.toLocaleString( 'es',{ maximumFractionDigits: 0 } ) }}</s></ion-label>
+            <ion-label *ngIf=" producto.descuentomax <=0 " ><b>{{ producto.tipolista }} ${{ producto.precio.toLocaleString( 'es',{ maximumFractionDigits: 0 } ) }}</b></ion-label>
+        </ion-chip>
+
+        <ion-chip *ngIf=" producto.descuentomax > 0 ">
+            <ion-label color="star"><b>-{{ producto.descuentomax.toLocaleString( 'es',{ maximumFractionDigits: 2 } ) }}% => ${{ producto.dsctovalor.toLocaleString( 'es',{ maximumFractionDigits: 0 } ) }}</b></ion-label>
+        </ion-chip>
+
+        <ion-chip *ngIf=" producto.descuentomax > 0 ">
+            <ion-icon name="cash"></ion-icon>
+            <ion-label><b>${{ producto.preciomayor.toLocaleString( 'es',{ maximumFractionDigits: 0 } ) }}</b></ion-label>
+        </ion-chip>
+        
+    </div>
+    
+</app-flash-card>
+
+
+
+
